force-app/main/default/objects/Sums_By_Carrier__c/Sums_By_Carrier__c.object-meta.xml
<CustomObject>
    <label>Sums by Carrier</label>
    <nameField>
        <displayFormat>SUMS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sums by Carrier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>