force-app/main/default/objects/Sums_By_Carrier__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sums by Carrier</relationshipLabel>
    <relationshipName>Sums_by_Carrier</relationshipName>
    <type>Lookup</type>
</CustomField>