force-app/main/default/objects/Sums_By_Carrier__c/fields/Commision_Debit__c.field-meta.xml
<CustomField>
    <fullName>Commision_Debit__c</fullName>
    <description>הפרש בין  סה&quot;כ עמלות לסה&quot;כ תשלום</description>
    <formula>Total_Commision__c -  Total_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commision Debit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>