force-app/main/default/objects/Sums_By_Carrier__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Novidea_HPC__Policy__c</referenceTo>
    <relationshipLabel>Sums by Carrier</relationshipLabel>
    <relationshipName>Sums_by_Carrier</relationshipName>
    <type>Lookup</type>
</CustomField>