force-app/main/default/objects/Sums_By_Carrier__c/fields/Total_Commision__c.field-meta.xml
<CustomField>
    <fullName>Total_Commision__c</fullName>
    <description>Total commission from Incomes</description>
    <label>Total Commision</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>