force-app/main/default/objects/Sums_By_Carrier__c/fields/Total_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium__c</fullName>
    <description>The total premium</description>
    <label>Total Premium</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>