force-app/main/default/objects/Sums_By_Carrier__c/fields/Unique_Key_2__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key_2__c</fullName>
    <description>sum of fields Policy__c and carrier</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>36</length>
    <type>Text</type>
</CustomField>